src/test/c/reject/28-invalid-while-condition.arcx
while a == b {
    a:int=0;
} 